--- a/extensions/autocomplete-tags.toml
+++ b/extensions/autocomplete-tags.toml
@@ -1,10 +1,12 @@
 id = "org.standardnotes.autocomplete-tags"
-npm = "sn-folders-component"
+npm = "sn-autocomplete-tags"
 github = "sn-extensions/autocomplete-tags"
 main = "index.html"
 name = "Quick Tags"
 content_type = "SN|Component"
 area = "note-tags"
-version = "1.3.1"
-description = "Work more efficiently by quickly selecting from a live list of tags while you type. Supports keyboard shortcuts and folders."
+version = "1.3.2"
+marketing_url = ""
 thumbnail_url = "https://s3.amazonaws.com/standard-notes/screenshots/models/components/autocomplete.jpg"
+description = "Work more efficiently by quickly selecting from a live list of tags while you type. Supports keyboard shortcuts and folders."
+flags = []
